# ai_aws_cli

./: .dockerignore  .gitignore  .mcp.json  AGENT.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: README.md  plugin.json
.github/marketplace/: awesome-mcp-servers-pr.md  cline-marketplace-submission.md
.github/workflows/: publish.yml
.governance/: definition-of-done.md  evidence-gates.md  reasoning-policy.md  runtime-config.yaml  self-model.md  world-model.md
openspec/changes/add-rate-limiting-to-session-mode/: design.md  proposal.md  tasks.md
openspec/changes/build-aaws-cli/: tasks.md
openspec/specs/audit-log/: spec.md
openspec/specs/command-safety/: spec.md
openspec/specs/error-recovery/: spec.md
openspec/specs/interactive-session/: spec.md
openspec/specs/llm-provider/: spec.md
openspec/specs/marketplace-submissions/: spec.md
openspec/specs/mcp-safety-gate/: spec.md
openspec/specs/nl-to-aws-command/: spec.md
openspec/specs/output-formatting/: spec.md
src/aaws/: __init__.py  audit.py  cli.py  config.py  errors.py  executor.py  formatter.py  mcp_server.py  rate_limit.py  session.py  translator.py
tests/: test_audit.py  test_audit_integration.py  test_cli.py  test_config.py  test_error_recovery.py  test_errors.py  test_executor.py  test_formatter.py  test_integration.py  test_mcp_server.py  test_providers.py  test_rate_limit.py  test_rate_limit_config.py  test_safety.py  test_safety_gate.py  test_session.py  test_session_rate_limit.py  test_tier_table_expansion.py  test_translator.py
(+28 files in other folders)
