[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aaws"
version = "0.1.0"
description = "AI-assisted AWS CLI — natural language in, aws command out."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "boto3>=1.34",
    "openai>=1.30",
    "pyyaml>=6",
    "pydantic>=2",
    "platformdirs>=4",
]

[project.scripts]
aaws = "aaws.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[bedrock-runtime]>=1.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aaws"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
